--- a/index.html
+++ b/index.html
@@ -17,6 +17,41 @@
     </head>
     <body>
         
+        <!-- ====================== Start Header Area ============================ -->
+        <header class="header_area">
+            <div class="main-menu">
+                <nav class="navbar navbar-expand-lg navbar-light">
+                  <a class="navbar-brand" href="#">Aishwarya Mallampati</a>
+                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNav">
+                    <div class="mr-auto"></div>  
+                    <ul class="navbar-nav">
+                      <li class="nav-item active">
+                        <a class="nav-link" href="#">HOME<span class="sr-only">(current)</span></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">ABOUT</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">PROJECTS</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">PAGES</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">BLOG</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">CONTACT</a>
+                      </li>
+                    </ul>
+                  </div>
+                </nav>
+            </div>
+        </header>
+        <!-- ====================== End Header Area ============================ -->
         
         <!-- Jquery js file -->
         <script src="./js/bootstrap.min.js"></script>
