DIP projects completed

--- a/projectsHTML/DIP-II/P3/P3Desc.html
+++ b/projectsHTML/DIP-II/P3/P3Desc.html
@@ -3,14 +3,14 @@
     <header>
     </header>
     <body>
-        <p>Input: An image containing five sets of differntly-sized solid black disks randomly scattered in the image.</p>
-        <p>Task: Design appropriate hit-or-miss transform to detect the smallest and largest disks.</p>
+        <p>Task: To apply nonlinear filters on input image containing noise.</p>
+        <p>Built mean, median, alpha-trimmed mean, sigma and symmetric nearest-neighbor mean filters from scratch to apply on the given input image.</p>
+        
+        <p>Task: Apply anisotropic diffusion on two sets of images</p>
         <p>Steps:</p>
         <ul>
-            <li>Thresholded the input image to convert it into binary image</li>
-            <li>Removed noise by applying closing operation</li>
-            <li>Created structuring elements to detect small and large disks</li>
-            <li>Applied hit or miss transform using the structuring elements to get the final result</li>
+            <li>Conduction coefficient is computed using exponential and inverse quadratic methods</li>
+            <li>Anisotropic diffusion is applied on the 100 times to the given set of images</li>
         </ul>
     </body>
 </html>
