--- a/projectsHTML/DIP-II/P4/P4Desc.html
+++ b/projectsHTML/DIP-II/P4/P4Desc.html
@@ -3,14 +3,13 @@
     <header>
     </header>
     <body>
-        <p>Input: An image containing five sets of differntly-sized solid black disks randomly scattered in the image.</p>
-        <p>Task: Design appropriate hit-or-miss transform to detect the smallest and largest disks.</p>
+        <p>Task: Segment textures in an input image using gabor filter.</p>
         <p>Steps:</p>
         <ul>
-            <li>Thresholded the input image to convert it into binary image</li>
-            <li>Removed noise by applying closing operation</li>
-            <li>Created structuring elements to detect small and large disks</li>
-            <li>Applied hit or miss transform using the structuring elements to get the final result</li>
+            <li>Circular symmetric gaussian is computed using 1-D gaussian</li>
+            <li>Gabor elementary function is generated</li>
+            <li>Input image is convoluted with gabor elementary functions</li>
+            <li>Obtained result is smoothed and then thresholded to segment different textures</li>
         </ul>
     </body>
 </html>
