--- a/projectsHTML/DIP-II/P5/P5Desc.html
+++ b/projectsHTML/DIP-II/P5/P5Desc.html
@@ -3,14 +3,13 @@
     <header>
     </header>
     <body>
-        <p>Input: An image containing five sets of differntly-sized solid black disks randomly scattered in the image.</p>
-        <p>Task: Design appropriate hit-or-miss transform to detect the smallest and largest disks.</p>
+        <p>Task: Generate fractal images using IFS</p>
         <p>Steps:</p>
         <ul>
-            <li>Thresholded the input image to convert it into binary image</li>
-            <li>Removed noise by applying closing operation</li>
-            <li>Created structuring elements to detect small and large disks</li>
-            <li>Applied hit or miss transform using the structuring elements to get the final result</li>
+            <li>Initialized an image of size 1024 x 1024</li>
+            <li>Initialized a starting point and ran IFS algorithm for a specified number of times</li>
+            <li>In each iteration, a random number is generated which is used to select the affine transform to be applied on the image</li>
+            <li>Set the pixel corresponding to this iteration to 1 and use it as seed point for the next iteration</li>
         </ul>
     </body>
 </html>
