Added criminal intent and nerd launcher android apps

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                     <a href="#projectsSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Projects</a>
                     <ul class="collapse list-unstyled" id="projectsSubmenu">
                         <li>
+                            <a href="#Android">Android Development</a>
+                        </li>
+                        <li>
                             <a href="#DIP-II">DIP-II</a>
                         </li>
                     </ul>
@@ -130,17 +133,32 @@
                     </div>
                     <!-- Android Projects List -->
                     <div class="d-flex flex-row flex-nowrap projects-list">
-                        <!-- GeoQuiz Android Project--->
+                        <!-- CriminalIntent Android Project--->
                         <div class="col-lg-3 col-md-6 col-sm-12">
                             <div class="card project">
                                 <div class="project-image">
-                                    <img src="./projectsHTML/Android/GeoQuiz/Image.jpg" class="w3-border w3-padding" alt="Android GeoQuiz">
+                                    <img src="./projectsHTML/Android/CriminalIntent/Image.jpg" class="w3-border w3-padding" alt="Android GeoQuiz">
                                 </div>
                                 <div class="project-title text-center">
-                                    <h5>GeoQuiz</h5>
+                                    <h5>CriminalIntent</h5>
                                 </div>
                                 <div class="project-details text-center">
-                                    <button class="text-uppercase" onclick="openDialog('GeoQuiz','./projectsHTML/Android/GeoQuiz/Desc.html','./projectsHTML/Android/GeoQuiz/Media.html','https://github.com/aishwaryamallampati/AndroidDevelopment/tree/master/GeoQuiz')">Details</button>
+                                    <button class="text-uppercase" onclick="openDialog('GeoQuiz','./projectsHTML/Android/CriminalIntent/Desc.html','./projectsHTML/Android/CriminalIntent/Media.html','https://github.com/aishwaryamallampati/AndroidDevelopment/tree/master/CriminalIntent')">Details</button>
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <!-- NerdLauncher Android Project--->
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="card project">
+                                <div class="project-image">
+                                    <img src="./projectsHTML/Android/NerdLauncher/Image.PNG" class="w3-border w3-padding" alt="Android BeatBox">
+                                </div>
+                                <div class="project-title text-center">
+                                    <h5>NerdLauncher</h5>
+                                </div>
+                                <div class="project-details text-center">
+                                    <button class="text-uppercase" onclick="openDialog('NerdLauncher','./projectsHTML/Android/NerdLauncher/Desc.html','./projectsHTML/Android/NerdLauncher/Media.html','https://github.com/aishwaryamallampati/AndroidDevelopment/tree/master/NerdLauncher')">Details</button>
                                 </div>
                             </div>
                         </div>
@@ -156,6 +174,21 @@
                                 </div>
                                 <div class="project-details text-center">
                                     <button class="text-uppercase" onclick="openDialog('BeatBox','./projectsHTML/Android/BeatBox/Desc.html','./projectsHTML/Android/BeatBox/Media.html','https://github.com/aishwaryamallampati/AndroidDevelopment/tree/master/BeatBox')">Details</button>
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <!-- GeoQuiz Android Project--->
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="card project">
+                                <div class="project-image">
+                                    <img src="./projectsHTML/Android/GeoQuiz/Image.jpg" class="w3-border w3-padding" alt="Android GeoQuiz">
+                                </div>
+                                <div class="project-title text-center">
+                                    <h5>GeoQuiz</h5>
+                                </div>
+                                <div class="project-details text-center">
+                                    <button class="text-uppercase" onclick="openDialog('GeoQuiz','./projectsHTML/Android/GeoQuiz/Desc.html','./projectsHTML/Android/GeoQuiz/Media.html','https://github.com/aishwaryamallampati/AndroidDevelopment/tree/master/GeoQuiz')">Details</button>
                                 </div>
                             </div>
                         </div>
