--- a/projectsHTML/ImageCredits.html
+++ b/projectsHTML/ImageCredits.html
@@ -12,6 +12,8 @@
         <ul>
             <li><span>GeoQuiz Photo by <a href="https://unsplash.com/@vradenburg?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Adam Vradenburg</a> on <a href="/s/photos/lake?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></li>
             <li><span>BeatBox Photo by <a href="https://unsplash.com/@frankielopez?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Frankie Lopez</a> on <a href="/s/photos/beats?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></li>
+            <li><span>NerdLauncher Photo by <a href="https://unsplash.com/@schattenstern?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Schattenstern</a> on <a href="/s/photos/launcher?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></li>
+            <li><span>CriminalIntent Photo by <a href="https://unsplash.com/@bill_oxford?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Bill Oxford</a> on <a href="/s/photos/criminal?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></li>
         </ul>
     </body>
 </html>
