Changed profile picture

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!-- Sidebar  -->
         <nav id="sidebar">
             <div class="sidebar-header">
-                <img src="./img/ProfilePicture.jpg" class="rounded-circle" alt="Profile Picture">
+                <img src="./img/ProfilePicture.PNG" class="rounded-circle" alt="Profile Picture">
                 <h3>Aishwarya Mallampati</h3>
             </div>
 
@@ -276,10 +276,10 @@
                                     <img src="./projectsHTML/DIP-II/P1/Project1.PNG" class="w3-border w3-padding" alt="DIP-II Project1">
                                 </div>
                                 <div class="project-title text-center">
-                                    <h5>Mathematical Morphotlogy:Hit-or-Miss Transform</h5>
+                                    <h5>Mathematical Morphology:Hit-or-Miss Transform</h5>
                                 </div>
                                 <div class="project-details text-center">
-                                    <button class="text-uppercase" id="details" onclick="openDialog('Mathematical Morphotlogy:Hit-or-Miss Transform','./projectsHTML/DIP-II/P1/P1Desc.html','./projectsHTML/DIP-II/P1/P1Img.html','https://github.com/aishwaryamallampati/PennState-MS/tree/master/DIP-II/Project1')">Details</button>
+                                    <button class="text-uppercase" id="details" onclick="openDialog('Mathematical Morphology:Hit-or-Miss Transform','./projectsHTML/DIP-II/P1/P1Desc.html','./projectsHTML/DIP-II/P1/P1Img.html','https://github.com/aishwaryamallampati/PennState-MS/tree/master/DIP-II/Project1')">Details</button>
                                 </div>
                             </div>
                         </div>
