final update profile picture

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!-- Sidebar  -->
         <nav id="sidebar">
             <div class="sidebar-header">
-                <img src="./img/ProfilePicture.PNG" class="rounded-circle" alt="Profile Picture">
+                <img src="./img/ProfilePicture.jpg" class="rounded-circle" alt="Profile Picture">
                 <h3>Aishwarya Mallampati</h3>
             </div>
 
