Added resume and contact info

--- a/index.html
+++ b/index.html
@@ -52,9 +52,12 @@
                         </li>
                     </ul>
                 </li>
-                <!--<li>
-                    <a href="#">Contact</a>
-                </li>-->
+                <li>
+                    <a href="./resume/resume.html" target="_blank">Resume</a>
+                </li>
+                <li>
+                    <a href="#footer">Contact</a>
+                </li>
             </ul>
         </nav>
 
@@ -319,7 +322,10 @@
             <!-- End Projects Area -->
             
             <!-- Start Footer -->
-            <div>
+            <div id="footer">
+                <a href="https://linkedin.com/in/aishwarya-mallampati-860551118" target="_blank">LinkedIn | </a>
+                <a href="https://github.com/aishwaryamallampati" target="_blank">GitHub | </a>
+                <a href="mailto: aishwarya.mallampati@gmail.com" target="_blank">Email: aishwarya.mallampati@gmail.com | </a>
                 <a href="./projectsHTML/ImageCredits.html" target="_blank">Image Credits</a>
             </div>
             <!-- End Footer -->
