--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                         <h3 id="BTech">BTech - IIITD&amp;M Kancheepuram</h3>
                     </div>
                     <!-- BTech Projects List -->
-                    <div class="d-flex flex-row flex-nowrap projects-list">
+                    <div class="d-flex flex-row flex-nowrap projects-list justify-content-center">
                         <!--DIP Project2-->
                         <div class="col-lg-3 col-md-6 col-sm-12">
                             <div class="card project">
